<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_200sdp"
            android:id="@+id/lottieAnimLayout"
            android:layout_height="@dimen/_200sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/splash_no_internet"
            app:lottie_loop="true"
            />


        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/noInternetText"
            android:textSize="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_internet_string"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noInternetText"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/retry"
            android:id="@+id/retry"
            android:textColor="@android:color/white"
            android:background="@color/design_default_color_primary"
            android:layout_gravity="center_horizontal">

        </Button>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:visibility="gone"
            android:id="@+id/notificationLayout"
            android:background="@color/mainAppBackGround"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:contentDescription="@string/notifications"
                android:layout_marginTop="@dimen/_100sdp"
                app:layout_constraintBottom_toTopOf="@+id/notifying"
                android:src="@drawable/app_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/bellIcon"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_height="@dimen/_120sdp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/_18sdp"
                android:id="@+id/notifying"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintBottom_toTopOf="@+id/notifying2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bellIcon"
                android:text="@string/notified"/>

            <TextView
                android:layout_width="0sp"
                android:textSize="@dimen/_14sdp"
                android:id="@+id/notifying2"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintBottom_toTopOf="@+id/enableBtn"
                android:fontFamily="@font/poppins_medium"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notifying"
                android:text="@string/Allow"/>


            <Button
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:id="@+id/enableBtn"
                android:elevation="@dimen/_6sdp"
                app:layout_constraintBottom_toTopOf="@+id/skipBtn"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/_60sdp"
                android:paddingStart="@dimen/_30sdp"
                android:textAllCaps="false"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/allow_text"
                app:layout_constraintTop_toBottomOf="@+id/notifying2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/text_background"
                android:layout_height="wrap_content">

            </Button>


            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/skipBtn"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                app:layout_constraintEnd_toEndOf="@+id/enableBtn"
                app:layout_constraintStart_toStartOf="@+id/enableBtn"
                app:layout_constraintTop_toBottomOf="@+id/enableBtn"
                android:textColor="@color/black"
                android:text="@string/stringValue"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_100sdp"
            android:id="@+id/homeAnimLayout"
            android:layout_height="@dimen/_100sdp"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/_100sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/home_loading"
            app:lottie_loop="true"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>