<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:id="@+id/save_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/new_draw4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/save_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginBottom="4sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/text_discount"
                    android:textColor="@android:color/white">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/remove_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/main_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/remove_ads"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp">

                </TextView>
            </RelativeLayout>


            <TextView
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5sp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/packages_month"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remove_ads">

            </TextView>


            <LinearLayout
                android:id="@+id/description_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20dp"
                android:background="@drawable/description"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/period">

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/remove_all_ads">

                </TextView>
            </LinearLayout>

            <Button
                android:id="@+id/subBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20dp"
                android:background="@drawable/new_draw4"
                android:text="@string/subs_now"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/description_lay">

            </Button>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</layout>